// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon > Style should render the Icon on left position 1`] = `
.c0 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  color: #ffffff;
  margin: 0 10px;
}

.c0 svg {
  width: 16px;
  color: #DA1E28;
}

<div
  className="c0 sc-jSFkmK c0 css-view-1dbjc4n"
/>
`;

exports[`Icon > Style should render the Icon on right position 1`] = `
.c0 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  color: #ffffff;
  margin: 0 10px;
}

.c0 svg {
  width: 16px;
  color: #DA1E28;
}

<div
  className="c0 sc-jSFkmK c0 css-view-1dbjc4n"
/>
`;

exports[`Icon > Style should render the Icon with error status 1`] = `
.c0 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  color: #ffffff;
  margin: 0 10px;
}

.c0 svg {
  width: 16px;
  color: #DA1E28;
}

<div
  className="c0 sc-jSFkmK c0 css-view-1dbjc4n"
/>
`;

exports[`Icon > Style should render the Icon with success status 1`] = `
.c0 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  color: #ffffff;
  margin: 0 10px;
}

.c0 svg {
  width: 16px;
  color: #24A148;
}

<div
  className="c0 sc-jSFkmK c0 css-view-1dbjc4n"
/>
`;

exports[`Icon > Style should render the Icon with warning status 1`] = `
.c0 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  color: #ffffff;
  margin: 0 10px;
}

.c0 svg {
  width: 16px;
  color: #F1C21B;
}

<div
  className="c0 sc-jSFkmK c0 css-view-1dbjc4n"
/>
`;

exports[`InputWrapper > Style should render the InputWrapper with error true 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #161616;
  border-bottom: 1px solid #8d8d8d;
  outline: 2px solid #DA1E28;
  border: none;
}

.c0:focus-within {
  outline: 2px solid #DA1E28;
  border-bottom-color: transparent;
}

<div
  className="c0 sc-gtssRu c0 css-view-1dbjc4n"
/>
`;

exports[`TextInput > Style should render the TextInput with icon on left position 1`] = `
.c0 {
  width: 100%;
  height: 40px;
  color: #919191;
  font-weight: normal;
  line-height: 18px;
  outline: transparent;
  font-size: 14px;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding: 0 10px 0 0;
}

.c0:disabled {
  outline: none;
  border: none;
  color: #919191;
}

.c0::-webkit-input-placeholder {
  color: #919191;
}

.c0::-moz-placeholder {
  color: #919191;
}

.c0:-ms-input-placeholder {
  color: #919191;
}

.c0::placeholder {
  color: #919191;
}

.c0:focus-within {
  color: #919191;
}

<input
  autoCapitalize="sentences"
  autoComplete="on"
  autoCorrect="on"
  className="c0 css-textinput-1cwyjr8"
  data-focusable={true}
  dir="auto"
  iconPosition="left"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onSelect={[Function]}
  readOnly={false}
  spellCheck={true}
  type="text"
/>
`;

exports[`TextInput > Style should render the TextInput with icon on right position 1`] = `
.c0 {
  width: 100%;
  height: 40px;
  color: #919191;
  font-weight: normal;
  line-height: 18px;
  outline: transparent;
  font-size: 14px;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  padding: 0 0 0 10px;
}

.c0:disabled {
  outline: none;
  border: none;
  color: #919191;
}

.c0::-webkit-input-placeholder {
  color: #919191;
}

.c0::-moz-placeholder {
  color: #919191;
}

.c0:-ms-input-placeholder {
  color: #919191;
}

.c0::placeholder {
  color: #919191;
}

.c0:focus-within {
  color: #919191;
}

<input
  autoCapitalize="sentences"
  autoComplete="on"
  autoCorrect="on"
  className="c0 css-textinput-1cwyjr8"
  data-focusable={true}
  dir="auto"
  iconPosition="right"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onSelect={[Function]}
  readOnly={false}
  spellCheck={true}
  type="text"
/>
`;
